Fix button overlapping text in product cards

--- a/sass/shortcodes/_pad_product.scss
+++ b/sass/shortcodes/_pad_product.scss
@@ -42,6 +42,7 @@
 
   .pad-product-excerpt {
     font-size: $product_excerpt_font_size;
+    margin-bottom: 60px;
   }
 
   .pad-onsale {
